bin_PROGRAMS = pwantools
pwantools_SOURCES = \
	main.cpp \
	main.h \
	pwanutils.cpp \
	pwanutils.h \
	pwanoptions.cpp \
	pwanoptions.h \
	pwanpck.cpp \
	pwanpck.h \
	pwanstrings.cpp \
	pwanstrings.h \
	pwandebug.cpp \
	pwandebug.h \
	pwandir.cpp \
	pwandir.h \
	pwanfileinfo.cpp \
	pwanfileinfo.h \
	pwancmdlineparser.cpp \
	pwancmdlineparser.h \
	testtool.cpp \
	testtool.h \
	teststrings.cpp \
	teststrings.h \
	testutils.cpp \
	testutils.h \
	testcmdlineparser.cpp \
	testcmdlineparser.h \
	testdebug.cpp \
	testdebug.h
CLEANFILES = *moc *~

AM_CXXFLAGS = $(BOOST_CPPFLAGS)
AM_LDFLAGS =  $(BOOST_LDFLAGS) $(BOOST_FILESYSTEM_LIB)
